--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,9 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Base.Base
 EditorStartupMap=/Game/Levels/Base.Base
+GameInstanceClass=/Script/Eclipse.EcpGameInstance
+GlobalDefaultGameMode=/Game/Blueprints/BP_EcpGameMode.BP_EcpGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
