--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,8 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B41BBDAF48EE1EB13AD0399D84E954D2
+
+
+[/Script/Eclipse.EcpUIManagerSubsystem]
+LayoutClass=/Game/UMG/BP_EcpGameLayout.BP_EcpGameLayout_C
+
