--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,5 +7,5 @@ ProjectID=B41BBDAF48EE1EB13AD0399D84E954D2
 
 
 [/Script/Eclipse.EcpUIManagerSubsystem]
-LayoutClass=/Game/UMG/BP_EcpGameLayout.BP_EcpGameLayout_C
-
+LayoutClass=/Game/Config/BP_EcpGameLayout.BP_EcpGameLayout_C
+WidgetRegistryAssetSoftPtr=/Game/Config/DA_LayerWidgetRegistryAsset.DA_LayerWidgetRegistryAsset
