--- a/Plugins/NotifyUI/NotifyUI.uplugin
+++ b/Plugins/NotifyUI/NotifyUI.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "EclipseUIFramework",
-	"Description": "Eclipse UI Framework",
+	"FriendlyName": "NotifyUI",
+	"Description": "Notification UI",
 	"Category": "Other",
 	"CreatedBy": "Jun-Cheol-Shin",
 	"CreatedByURL": "",
@@ -16,10 +16,9 @@
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "EclipseUIFramework",
+			"Name": "NotifyUI",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"ConfigName": "EclipseUIFramework"
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
