- UI 시스템 네이밍 변경 - 기존 게임 레이어를 Enum 클래스 관리 -> FGameplayTag로 레이어를 추가하도록 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Base.Base
 EditorStartupMap=/Game/Levels/Base.Base
-GameInstanceClass=/Script/EclipseUIFramework.EcpGameInstance
+GameInstanceClass=/Script/NamelessUISystem.NLGameInstance
 GlobalDefaultGameMode=/Game/Blueprints/BP_EcpGameMode.BP_EcpGameMode_C
 GlobalDefaultServerGameMode=None
 
