--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,10 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Guide",DevComment="")
++GameplayTagList=(Tag="Guide.Button1",DevComment="")
++GameplayTagList=(Tag="Guide.Button2",DevComment="")
++GameplayTagList=(Tag="Guide.Button3",DevComment="")
 +GameplayTagList=(Tag="UI.Layer",DevComment="LayerTest")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
