인게임 가이드 프리뷰 기능 마무리

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.Button1",DevComment="")
 +GameplayTagList=(Tag="Guide.Button2",DevComment="")
 +GameplayTagList=(Tag="Guide.Button3",DevComment="")
++GameplayTagList=(Tag="Guide.Button4",DevComment="")
 +GameplayTagList=(Tag="UI.Layer",DevComment="LayerTest")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
