--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.Button2",DevComment="")
 +GameplayTagList=(Tag="Guide.Button3",DevComment="")
 +GameplayTagList=(Tag="Guide.Button4",DevComment="")
++GameplayTagList=(Tag="Guide.ListView",DevComment="")
 +GameplayTagList=(Tag="UI.Layer",DevComment="LayerTest")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
