--- a/Plugins/UIGuideMask/UIGuideMask.uplugin
+++ b/Plugins/UIGuideMask/UIGuideMask.uplugin
@@ -19,6 +19,11 @@
 			"Name": "UIGuideMask",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "UIGuideMaskEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PreDefault"
 		}
 	],
 	"Plugins": [
