레드닷 플러그인 작업

--- a/Plugins/NamelessUISystem/NamelessUISystem.uplugin
+++ b/Plugins/NamelessUISystem/NamelessUISystem.uplugin
@@ -4,8 +4,8 @@
 	"VersionName": "1.0",
 	"FriendlyName": "NamelessUISystem",
 	"Description": "Nameless UISystem Framework",
-	"Category": "Other",
-	"CreatedBy": "Jun-Cheol-Shin",
+	"Category": "UI",
+	"CreatedBy": "904sinjun",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
