--- a/Plugins/NotifyUI/NotifyUI.uplugin
+++ b/Plugins/NotifyUI/NotifyUI.uplugin
@@ -4,8 +4,8 @@
 	"VersionName": "1.0",
 	"FriendlyName": "NotifyUI",
 	"Description": "Notification UI",
-	"Category": "Other",
-	"CreatedBy": "Jun-Cheol-Shin",
+	"Category": "UI",
+	"CreatedBy": "904sinjun",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
