--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,6 +22,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.HUDButton3",DevComment="")
 +GameplayTagList=(Tag="Guide.ListView",DevComment="")
 +GameplayTagList=(Tag="Guide.TreeView",DevComment="")
++GameplayTagList=(Tag="Inventory",DevComment="")
++GameplayTagList=(Tag="Quest",DevComment="")
++GameplayTagList=(Tag="Quest.Mission",DevComment="")
++GameplayTagList=(Tag="Quest.Story",DevComment="")
++GameplayTagList=(Tag="Skill",DevComment="")
++GameplayTagList=(Tag="Skill.Active",DevComment="")
++GameplayTagList=(Tag="Skill.Passive",DevComment="")
 +GameplayTagList=(Tag="UI.Layer",DevComment="LayerTest")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
