--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ Plugins/**/Intermediate/*
 DerivedDataCache/*
 Platforms/HoloLens/Config/HoloLensEngine.ini
 Platforms/HoloLens/Config/HoloLensEngine.ini
+
+
+Content/Protector/*
+
