프로젝트 입력 및 캐릭터 기본 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,6 @@ Platforms/HoloLens/Config/HoloLensEngine.ini
 Platforms/HoloLens/Config/HoloLensEngine.ini
 
 
-Content/Protector/*
+Content/Characters/*
+Content/Animation/*
 
