--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,3 +1,5 @@
+;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -22,6 +24,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.HUDButton3",DevComment="")
 +GameplayTagList=(Tag="Guide.ListView",DevComment="")
 +GameplayTagList=(Tag="Guide.TreeView",DevComment="")
++GameplayTagList=(Tag="InputTag",DevComment="")
++GameplayTagList=(Tag="InputTag.MouseLook",DevComment="")
++GameplayTagList=(Tag="InputTag.Move",DevComment="")
 +GameplayTagList=(Tag="Inventory",DevComment="")
 +GameplayTagList=(Tag="Quest",DevComment="")
 +GameplayTagList=(Tag="Quest.Mission",DevComment="")
