--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Base.Base
 EditorStartupMap=/Game/Levels/Base.Base
-GameInstanceClass=/Script/NamelessUISystem.NLGameInstance
+GameInstanceClass=/Script/Eclipse.EpGameInstance
 GlobalDefaultGameMode=/Game/Blueprints/BP_EcpGameMode.BP_EcpGameMode_C
 GlobalDefaultServerGameMode=None
 
