- 데이터 매니저, 리소스 매니저 생성 - 아이템 데이터 테스트

--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,6 @@ Platforms/HoloLens/Config/HoloLensEngine.ini
 Platforms/HoloLens/Config/HoloLensEngine.ini
 
 
-Content/Characters/*
+Content/Mesh/*
 Content/Animation/*
-Content/Protector/*
 
