- 인벤토리 컴포넌트 작업 중간 커밋 - 어빌리티 시스템 컴포넌트 추가, PlayerState 추가

--- a/Eclipse.uproject
+++ b/Eclipse.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"CommonUI",
-				"NamelessUISystem"
+				"NamelessUISystem",
+				"CoreUObject"
 			]
 		}
 	],
@@ -29,6 +30,10 @@
 		},
 		{
 			"Name": "AnimationLocomotionLibrary",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
 			"Enabled": true
 		}
 	]
