상호작용 인터페이스 작업 및 상호작용 DropItemactor에 연결 작업

--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,8 @@ Content/Mesh/*
 Content/Animation/*
 Content/Assets/*
 Content/Effects/*
+Content/Resource/Mesh/*
+Content/Resource/Texture/*
+Content/Resource/Material/*
+
 
