--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ CommonButtonAcceptKeyHandling=TriggerClick
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B41BBDAF48EE1EB13AD0399D84E954D2
 
+[/Script/CommonInput.CommonInputSettings]
+bEnableEnhancedInputSupport=False
+
