--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -25,6 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.ListView",DevComment="")
 +GameplayTagList=(Tag="Guide.TreeView",DevComment="")
 +GameplayTagList=(Tag="InputTag",DevComment="")
++GameplayTagList=(Tag="InputTag.Interact",DevComment="")
 +GameplayTagList=(Tag="InputTag.MouseLook",DevComment="")
 +GameplayTagList=(Tag="InputTag.Move",DevComment="")
 +GameplayTagList=(Tag="Inventory",DevComment="")
