--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -10,6 +11,7 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagRedirects=(OldTagName="InputTag.Interact.DirectUse",NewTagName="InputTag.Interact.UseDirect")
 +GameplayTagList=(Tag="Guide",DevComment="")
 +GameplayTagList=(Tag="Guide.Button1",DevComment="")
 +GameplayTagList=(Tag="Guide.Button2",DevComment="")
@@ -25,6 +27,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Guide.TreeView",DevComment="")
 +GameplayTagList=(Tag="InputTag",DevComment="")
 +GameplayTagList=(Tag="InputTag.Interact",DevComment="")
++GameplayTagList=(Tag="InputTag.Interact.Ping",DevComment="")
++GameplayTagList=(Tag="InputTag.Interact.UseDirect",DevComment="")
 +GameplayTagList=(Tag="InputTag.MouseLook",DevComment="")
 +GameplayTagList=(Tag="InputTag.Move",DevComment="")
 +GameplayTagList=(Tag="Inventory",DevComment="")
