- 프로젝트 전용 UISubSystem 연결

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,7 +12,6 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagRedirects=(OldTagName="InputTag.Interact.DirectUse",NewTagName="InputTag.Interact.UseDirect")
-+GameplayTagList=(Tag="Guide",DevComment="")
 +GameplayTagList=(Tag="Guide.Button1",DevComment="")
 +GameplayTagList=(Tag="Guide.Button2",DevComment="")
 +GameplayTagList=(Tag="Guide.Button3",DevComment="")
@@ -39,6 +38,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skill.Active",DevComment="")
 +GameplayTagList=(Tag="Skill.Passive",DevComment="")
 +GameplayTagList=(Tag="UI.Layer",DevComment="LayerTest")
++GameplayTagList=(Tag="UI.Layer.BottomSheet",DevComment="")
++GameplayTagList=(Tag="UI.Layer.LeftSheet",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
++GameplayTagList=(Tag="UI.Layer.RightSheet",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
++GameplayTagList=(Tag="UI.Layer.Tutorial",DevComment="")
++GameplayTagList=(Tag="UI.Layer.Window",DevComment="")
 
