Nameless UI System 전반적인 버그 개선 - UI 찾는 로직 수정 - UI 추가, 제거 하는 로직 수정 - 프로젝트 드랍 아이템에 상호작용 UI 적용 테스트 완료

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,7 @@ ProjectID=B41BBDAF48EE1EB13AD0399D84E954D2
 [/Script/CommonInput.CommonInputSettings]
 bEnableEnhancedInputSupport=False
 
+[/Script/NamelessUISystem.NLUISystemSettings]
+WidgetRegistryAssetSoftPtr=/Game/Blueprint/DA_LayerWidgetRegistryAsset.DA_LayerWidgetRegistryAsset
+LayoutClass=/Game/Blueprint/UMG/Core/WBP_EpGameLayout.WBP_EpGameLayout_C
+
