- MenuHUB 및 Inventory UI 출력 준비

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -28,6 +28,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="InputTag.Interact",DevComment="")
 +GameplayTagList=(Tag="InputTag.Interact.Ping",DevComment="")
 +GameplayTagList=(Tag="InputTag.Interact.UseDirect",DevComment="")
++GameplayTagList=(Tag="InputTag.Inventory",DevComment="")
 +GameplayTagList=(Tag="InputTag.MouseLook",DevComment="")
 +GameplayTagList=(Tag="InputTag.Move",DevComment="")
 +GameplayTagList=(Tag="Inventory",DevComment="")
@@ -41,7 +42,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.BottomSheet",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.LeftSheet",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Modal",DevComment="")
-+GameplayTagList=(Tag="UI.Layer.RightSheet",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Tutorial",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Window",DevComment="")
