인벤토리 메뉴 레이아웃 수정

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -45,4 +45,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="UI.Layer.System",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Tutorial",DevComment="")
 +GameplayTagList=(Tag="UI.Layer.Window",DevComment="")
++GameplayTagList=(Tag="UI.MenuHub.Inventory",DevComment="")
 
